<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/alert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/alert"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_margin="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/l_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="none"
                android:text="@string/l_duration" />

            <EditText
                android:id="@+id/duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="time"
                android:hint="@string/h_in_min" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_beep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/l_beep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="none"
                android:text="@string/l_beepInterval"/>


            <EditText
                android:id="@+id/beepevery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="time"
                android:hint="@string/h_in_min" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/l_beep_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/l_beepaudio" />

            <Spinner
                android:id="@+id/beepSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints="@string/h_select_song"
                android:layout_weight="1"
                android:layout_margin="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/b_start" />

            <Button
                android:id="@+id/b_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/b_pause" />

            <Button
                android:id="@+id/b_resume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/b_resume" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/b_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/b_stop" />

            <Button
                android:id="@+id/b_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="8dp"
                android:text="@string/b_reset" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>